--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         { "name": "Jonas Hansen", "email": "jonas.kerwin.hansen@gmail.com" }
     ],
     "require": {
-        "laravel/framework": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
+        "laravel/framework": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
         "nesbot/carbon": "^1.22"
     },
     "require-dev": {
@@ -33,9 +33,9 @@
             "providers": [
                 "CollabCorp\\Formatter\\FormatterServiceProvider"
             ],
-	      	"aliases": {
-	      		"Formatter": "CollabCorp\\Formatter\\Formatter"
-	      	}
+            "aliases": {
+                "Formatter": "CollabCorp\\Formatter\\Formatter"
+            }
         }
     }
 }
