adds helper and adds ability to bail on empty/null values

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
     "autoload": {
         "psr-4": {
             "CollabCorp\\": "src/"
-        }
+        },
+        "files" : [
+            "src/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
