--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "laravel/framework": "5.5.*|5.6.*|5.7.*",
-        "nesbot/carbon": "^1.22"
+        "collab-corp/input-formatter": "^0.0.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
@@ -18,14 +18,11 @@
     "autoload": {
         "psr-4": {
             "CollabCorp\\": "src/"
-        },
-        "files" : [
-            "src/helpers.php"
-        ]
+        }
     },
     "autoload-dev": {
         "psr-4": {
-            "CollabCorp\\Formatter\\Tests\\": "tests/"
+            "CollabCorp\\LaravelInputFormatter\\Tests\\": "tests/"
         }
     },
     "scripts": {
@@ -33,11 +30,8 @@
     },
     "extra": {
         "laravel": {
-            "providers": [
-                "CollabCorp\\Formatter\\FormatterServiceProvider"
-            ],
             "aliases": {
-                "Formatter": "CollabCorp\\Formatter\\Formatter"
+                "Formatter": "CollabCorp\\LaravelInputFormatter\\DataFormatter"
             }
         }
     }
