--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,21 @@
 {
-    "name": "collab-corp/formatter",
-    "description": "Formatting utility package for laravel",
+    "name": "collab-corp/data-formatter",
+    "description": "Formatting utility package for php",
     "license": "MIT",
     "type": "library",
-    "keywords": ["laravel", "formatting", "input formatting"],
+    "keywords": ["php", "formatting", "input formatting", "sanitize", "sanitize input"],
     "authors": [
         { "name": "Sergio Compean", "email": "scompean24@gmail.com" },
         { "name": "Jonas Hansen", "email": "jonas.kerwin.hansen@gmail.com" }
     ],
     "require": {
-        "laravel/framework": "5.5.*|5.6.*|5.7.*",
-        "collab-corp/input-formatter": "^0.0.5"
+        "php": ">=7.0",
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
+        "illuminate/validation": "~5.5.0|~5.6.0|~5.7.0|~5.8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^6.0",
+        "symfony/var-dumper": "^4.3"
     },
     "autoload": {
         "psr-4": {
@@ -22,17 +24,10 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "CollabCorp\\LaravelInputFormatter\\Tests\\": "tests/"
+            "CollabCorp\\Formatter\\Tests\\": "tests/"
         }
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
-    },
-    "extra": {
-        "laravel": {
-            "aliases": {
-                "Formatter": "CollabCorp\\LaravelInputFormatter\\DataFormatter"
-            }
-        }
     }
 }
