--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     ],
     "require": {
         "php": ">=7.0",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
-        "illuminate/validation": "~5.5.0|~5.6.0|~5.7.0|~5.8.0"
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0",
+        "illuminate/validation": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0",
