--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "collab-corp/data-formatter",
+    "name": "collab-corp/formatter",
     "description": "Formatting utility package for php",
     "license": "MIT",
     "type": "library",
@@ -9,13 +9,13 @@
         { "name": "Jonas Hansen", "email": "jonas.kerwin.hansen@gmail.com" }
     ],
     "require": {
-        "php": ">=7.0",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0",
-        "illuminate/validation": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0"
+        "php": "^7.2.5",
+        "illuminate/support": "~6.0|^7.24",
+        "illuminate/validation": "~6.0|^7.24"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0",
-        "symfony/var-dumper": "^4.3"
+        "phpunit/phpunit": "^8.5",
+        "symfony/var-dumper": "^5.1"
     },
     "autoload": {
         "psr-4": {
