--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     ],
     "require": {
         "php": "^7.2.5",
-        "illuminate/support": "~6.0|^7.24",
-        "illuminate/validation": "~6.0|^7.24"
+        "illuminate/support": "~6.0|~7.0|^8.0",
+        "illuminate/validation": "~6.0|~7.0|^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
