--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
         { "name": "Jonas Hansen", "email": "jonas.kerwin.hansen@gmail.com" }
     ],
     "require": {
-        "php": "^7.2.5",
+        "php" : "^7.2.5|^8.0",
         "illuminate/support": "~6.0|~7.0|^8.0",
         "illuminate/validation": "~6.0|~7.0|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5",
+        "phpunit/phpunit": "^8.0|^9.0",
         "symfony/var-dumper": "^5.1"
     },
     "autoload": {
