--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-vendor/
-node_modules
-.php_cs.cache
-.phpunit.result.cache
+vendor
 composer.lock
+phpunit.xml
+.env
+.phpunit.result.cache
+.php-cs-fixer.cache
+node_modules
